--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "GraphQL Application for querying users",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "json:server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "json-server": "^0.17.3",
     "lodash": "^4.17.21"
   }
 }
